Translate WhoAmI section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,5 +8,11 @@
         "backend_text": "Backend development",
         "cta_button_text": "Inquire Now",
         "secondary_button_text": "See More"
+    },
+    "who_am_i_section": {
+        "title": "Who am I?",
+        "first_paragraph": "Hello, I’m Erinç Tuna Polat. I studied Computer Engineering at TED University. Alongside my major, I pursued a minor in psychology to better understand the interaction between humans and technology. I have been working in the software development field for over seven years, and I founded my own company to undertake a wide variety of projects.",
+        "second_paragraph": "I have led various SaaS projects, including IoT device integration, smart lock management, IP camera-based security systems, and systems that manage building access permissions. I developed solutions for both web and mobile platforms using React/Next.js, React Native/Expo and Nodejs. I also optimized projects by managing Docker and CI/CD processes, ensuring seamless integration and continuous deployment.",
+        "third_paragraph": "Among my freelance projects are innovative solutions like event management applications, contactless receipt systems, and fitness assistant apps. I have completed projects for clients from Germany, Canada, and Türkiye across various sectors. With my strong technical expertise and the collaborative work I have done with my teams, I strive to make a difference in the tech world. I look forward to collaborating with potential clients on new projects, helping them accelerate their digital transformation processes."
     }
 }
