--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -14,5 +14,19 @@
         "first_paragraph": "Merhaba, ben Erinç Tuna Polat. TED Üniversitesi’nde Bilgisayar Mühendisliği okudum. Ana dalımın yanı sıra, insan ve teknoloji etkileşimini daha iyi anlayabilmek için psikoloji alanında yandal yaptım. Yedi yılı aşkın süredir yazılım geliştirme alanında çalışıyorum ve farklı projeler hayata geçirmek için kendi şirketimi kurdum.",
         "second_paragraph": "IoT cihaz entegrasyonu, akıllı kilit yönetimi, IP kamera tabanlı güvenlik sistemleri ve bina erişim izinlerini yöneten sistemler gibi çeşitli SaaS projelerine liderlik ettim. Web ve mobil platformlar için React/Next.js, React Native/Expo ve Node.js kullanarak çözümler geliştirdim. Ayrıca, Docker ve CI/CD süreçlerini yöneterek projelerin kesintisiz entegrasyonunu ve sürekli dağıtımını sağladım.",
         "third_paragraph": "Freelance projelerim arasında etkinlik yönetim uygulamaları, temassız fiş sistemleri ve fitness asistanı uygulamaları gibi yenilikçi çözümler yer alıyor. Almanya, Kanada ve Türkiye’den farklı sektörlerdeki müşteriler için projeler tamamladım. Güçlü teknik bilgim ve ekiplerimle yaptığım iş birlikleri sayesinde teknoloji dünyasında fark yaratmayı hedefliyorum. Yeni projelerde potansiyel müşterilerle iş birliği yaparak dijital dönüşüm süreçlerini hızlandırmalarına yardımcı olmayı dört gözle bekliyorum."
+    },
+    "services_section": {
+        "title_regular_before_break": "Ürün Oluşturmanın Üç Adımı",
+        "title_regular_after_break": "",
+        "title_bold": "Hemen Öne Çıksın",
+        "design_card_title": "Tasarım",
+        "design_card_description": "İlk adım, marka kimliklerini keşfetmek ve tanımlamak, şirketlerin piyasada benzersiz bir karakter ve varlık ile öne çıkmasına yardımcı olacak özgün görsel stiller oluşturmayı içerir.",
+        "design_card_alt": "Erinç Polat tarafından geliştirilen bir uygulamanın ekran görüntüsü",
+        "development_card_title": "Geliştirme",
+        "development_card_description": "Süreç tasarımdan geliştirmeye geçtiğinde, konseptler dijital deneyimlere dönüştürülerek web siteleri, uygulamalar ve ürünler etkileyici marka hikayelerini iletmek için oluşturulur.",
+        "development_card_alt": "Erinç Polat'ın yaptığı web tasarımlarının ekran görüntüleri",
+        "improvement_card_title": "Geliştirme",
+        "improvement_card_description": "Analitik desteği, servis konteynerleştirme, SEO/ASO, mağaza testleri ve takip ayarları, sunucu yapılandırması ve sürekli iyileştirmeler uygulanır.",
+        "improvement_card_alt": "Farklı teknolojilerin logoları"
     }
 }
