--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -64,5 +64,9 @@
         "works": "Projeler",
         "process": "Süreç",
         "contact": "İletişim"
+    },
+    "projects": {
+        "title": "Projeler",
+        "subtitle": "Projelerimi aşağıdaki listeden inceleyebilirsiniz."
     }
 }
